# gopdfjs

./: .gitignore  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  dev.config.yaml  package.json  pangu.config.json  pangu.config.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  qingniao.config.json  turbo.json
.changeset/: config.json  initial-public-release.md  public-npm-0-2-0.md  public-release-0-2-0.md  quick-signs-camp.md
.claude/: settings.local.json
.claude/agents/: README.md  gopdf-albert-li.md  gopdf-daniel-kowalski.md  gopdf-linus-torvalds.md  gopdf-maya-okonkwo.md
.cursor/: mcp.json
.github/workflows/: deploy-site.yml
.husky/: pre-commit
.spec/: ROADMAP.md  TASK_TRACKING.md
.spec/e2e/: playwright.config.ts
.spec/rfc/: 0004-optimization-security-advanced-tools.md  0005-multi-language-support.md  0008-compress-pdf.md  0019-pdf-to-word.md  0023-web-to-pdf.md  0024-pdf-to-excel.md  0025-pdf-to-ppt.md  0026-redact-pdf.md  0027-repair-pdf.md  0028-grayscale-pdf.md  0029-halve-pdf.md  0030-n-up-pdf.md  0031-form-filler.md  0032-native-text-edit.md  0033-pdf-to-text-html.md  0034-pdf-to-epub.md  0035-extract-images.md  0036-office-to-pdf.md  0037-scan-to-pdf.md  0038-markdown-latex-to-pdf.md  0039-heic-webp-to-pdf.md  0040-resize-pdf.md  0041-reverse-pdf.md  0042-web-optimize.md  0043-flatten-pdf.md  0044-edit-metadata.md  0045-pdf-overlay.md  0049-invoice-generator.md  0050-job-app-creator.md  0051-qr-code-generator.md  0052-viewer-preferences.md  0053-compare-pdf.md  0054-invert-colors.md  0055-zip-to-pdf.md  0056-niche-to-pdf.md  0057-rust-wasm-engine-architecture.md  0057-rust-wasm-worker-architecture.md  0058-engine-plugin-charter.md  0058-wasm-pdf-library-charter.md  0059-pdf-object-layer.md  (+3 more)
.spec/scripts/: check-layer-deps.py  check-public-exports.py  (+2 more)
apps/: ports.ts
crates/: README.md
crates/pdf-wasm/: Cargo.toml
crates/pdf-wasm/src/: lib.rs
docs/: BREW_PUBLISHING.md  PUBLISHING.md
scripts/: apply-publish-exports.mjs  check-layer-deps.mjs  check-public-exports.mjs  download-e2e-fixtures.sh  install.js  release-cli.mjs  vite-adapter-external.mjs  vite-lib-externals.mjs  vite-plugin-bundle-public-dts.mjs  vite-plugin-vendor-wasm.mjs
site/: README.md  WEBSITE_REVIEW.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+416 files in other folders)
