[workspace]
members = [
    "crates/gopdf-compress",
    "crates/gopdf-image",
    "crates/gopdf-linearize",
    "packages/wasm/rust",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
flate2 = { version = "1", features = ["rust_backend"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
gopdf-compress = { path = "crates/gopdf-compress" }
gopdf-image = { path = "crates/gopdf-image" }
gopdf-linearize = { path = "crates/gopdf-linearize" }

[profile.release]
# Optimise for size — critical for WASM binary budget (<1 MB gzipped per RFC 0057)
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
